--- a/kids_product.html
+++ b/kids_product.html
@@ -454,57 +454,27 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
 
-                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no"
-                        frameborder="0"
-                        src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                   <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B015N4WK96&asins=B015N4WK96&linkId=94acd166f638889bcacdbeebed96ebb1&show_border=true&link_opens_in_new_window=true"></iframe>
                 </div>
                 <div class="swiper-slide">
 
-                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no"
-                        frameborder="0"
-                        src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                  <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07PBQN1YL&asins=B07PBQN1YL&linkId=920727f6fc599f898adc4ad17c6a2760&show_border=true&link_opens_in_new_window=true"></iframe>
                 </div>
                 <div class="swiper-slide">
 
-                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no"
-                        frameborder="0"
-                        src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                   <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B084DVXGN5&asins=B084DVXGN5&linkId=250dbe4d8c7a479fc2849bc03adcf34b&show_border=true&link_opens_in_new_window=true"></iframe>
                 </div>
                 <div class="swiper-slide">
 
-                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no"
-                        frameborder="0"
-                        src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                   <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B06XY98VPT&asins=B06XY98VPT&linkId=3986d0d7905c0555478dfdff5e4a9ff0&show_border=true&link_opens_in_new_window=true"></iframe>
                 </div>
                 <div class="swiper-slide">
 
-                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no"
-                        frameborder="0"
-                        src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                  <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07NNM7649&asins=B07NNM7649&linkId=f68aa286b3538df3bd70aea7b79fb920&show_border=true&link_opens_in_new_window=true"></iframe>
                 </div>
                 <div class="swiper-slide">
 
-                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no"
-                        frameborder="0"
-                        src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
-                </div>
-                <div class="swiper-slide">
-
-                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no"
-                        frameborder="0"
-                        src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
-                </div>
-                <div class="swiper-slide">
-
-                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no"
-                        frameborder="0"
-                        src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
-                </div>
-                <div class="swiper-slide">
-
-                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no"
-                        frameborder="0"
-                        src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                   <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07M6ZFG8M&asins=B07M6ZFG8M&linkId=e8f3ca85f9df7e29e64d79b06086cfe9&show_border=true&link_opens_in_new_window=true"></iframe>
                 </div>
 
             </div>
