--- a/men.html
+++ b/men.html
@@ -110,6 +110,8 @@
                                                 <li><a href="index.html" target="_blank">Home</a></li>
                                                 <li><a href="men.html" class="active">Men </a>
                                                 </li>
+                                                <li><a href="men_watches.html" target="_blank">Men's Watches</a></li>
+
                                                 <li><a href="women.html" target="_blank">Women</a>
 
                                                 </li>
@@ -123,7 +125,7 @@
                                                 <li><a href="lifestyle.html" target="_blank">Lifestyle</a></li>
                                                 <li><a href="pet_products.html" target="_blank">Pet Products</a></li>
                                                 <li><a href="makeup.html" target="_blank">Makeup</a></li>
-                                                <li><a href="./ContactFrom/contact.html" target="_blank">Contact Us</a>
+                                                
                                                 </li>
                                             </ul>
                                         </div>
@@ -417,6 +419,23 @@
 
 
                         </div>
+                           <div class="row">
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                              <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07XV6H8GK&asins=B07XV6H8GK&linkId=d25b92f5aa3f7ca1c26c1cfca3ee50e1&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                               <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B06XX1PDPT&asins=B06XX1PDPT&linkId=c47e31f481266579b15e4f880b1cce90&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                             <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07Z2Z46ZF&asins=B07Z2Z46ZF&linkId=e24a84627d3dc71685690e60f32f36af&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                               <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B06XX2PTQD&asins=B06XX2PTQD&linkId=4b90abee94da97a26f488b3eee2240ee&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+
+
+
+                        </div>
 
                     </div>
                 </div>
@@ -446,9 +465,17 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
 
-                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no"
-                        frameborder="0"
-                        src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                   <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
+                            scrolling="no" frameborder="0"
+                            src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                </div>
+                <div class="swiper-slide">
+
+                   <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B084L7NNHW&asins=B084L7NNHW&linkId=f87fd48041cb2929425a997bb15b7648&show_border=true&link_opens_in_new_window=true"></iframe>
+                </div>
+                <div class="swiper-slide">
+
+                  <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B084QCD8SH&asins=B084QCD8SH&linkId=151710cd3b8ec89b0562f6dae509a145&show_border=true&link_opens_in_new_window=true"></iframe>
                 </div>
                 <div class="swiper-slide">
 
@@ -458,46 +485,13 @@
                 </div>
                 <div class="swiper-slide">
 
-                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no"
-                        frameborder="0"
-                        src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                   <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07RLVJWLJ&asins=B07RLVJWLJ&linkId=5339991d65e1603decdec88a061a9138&show_border=true&link_opens_in_new_window=true"></iframe>
                 </div>
                 <div class="swiper-slide">
 
-                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no"
-                        frameborder="0"
-                        src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                      <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07RYHFSYQ&asins=B07RYHFSYQ&linkId=e9fc64551b8950995a5afb4d2eb5ccb9&show_border=true&link_opens_in_new_window=true"></iframe>
                 </div>
-                <div class="swiper-slide">
-
-                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no"
-                        frameborder="0"
-                        src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
-                </div>
-                <div class="swiper-slide">
-
-                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no"
-                        frameborder="0"
-                        src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
-                </div>
-                <div class="swiper-slide">
-
-                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no"
-                        frameborder="0"
-                        src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
-                </div>
-                <div class="swiper-slide">
-
-                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no"
-                        frameborder="0"
-                        src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
-                </div>
-                <div class="swiper-slide">
-
-                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no"
-                        frameborder="0"
-                        src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
-                </div>
+                        
 
             </div>
             <!-- Add Pagination -->
